# django_stuff

./: .gitignore  db.sqlite3  exported_Student_data_2025-11-14-13-13-08.csv  pyproject.toml
awd_main/: celery.py  forms.py  settings.py  urls.py  views.py
dataentry/: models.py  task.py  urls.py  utils.py  views.py
dataentry/management/commands/: exportdata.py  importdata.py  insertdata.py
dataentry/migrations/: 0001_initial.py  0002_customer.py  0003_employee.py
static/js/: custom.js
templates/: base.html  home.html  login.html  register.html
templates/dataentry/: exportdata.html  importdata.html
uploads/: admin.py
uploads/migrations/: 0001_initial.py
